--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Exchange Rate Converter</h1>
+        <h1>Exchange <span id="title">Rate Converter</span></h1>
         <div id="input">
             <input type="number" name="number" id="amount" placeholder="Enter the amount">
         <select name="have" id="have">
