--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </select>
         </div>
         <button id="convert">Convert Currency</button>
-        <div id="result"></div>
+        <span id="result"></span>
     </div>
     <script src="index.js"></script>
 </body>
